Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11907

sanity fails to cleanup d60g.sanity

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0, Lustre 2.12.4
    • Lustre 2.12.2, Lustre 2.12.3
    • None
    • 3
    • 9223372036854775807

      == sanity test complete, duration 31 sec ============================================================= 14:20:26 (1548926426)
      rm: cannot remove '/mnt/lustre/d60g.sanity': Directory not empty
      sanity : @@@@@@ FAIL: remove sub-test dirs failed

      this is because 60g left d60g.sanity in inconsistent state:
      striped directory creation failed to create one stripe, then failed to remove direntry (due to same OBD_FAIL_OSD_TXN_START).
      when final rmdir fails to load inode with:
      LustreError: 25350:0:(llite_lib.c:2414:ll_prep_inode()) new_inode -fatal: rc -2

      I'm not sure what would be a correct approach here as in the fields we'd suggest to run LFSCK. probably we should use something like lctl rmdir .. to cleanup after 60g?

            laisiyao Lai Siyao
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: