lustre/include/obd_support.h
@@ -266,6 +266,8 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_MDS_RECOVERY_ACCEPTS_GAPS 0x185
 #define OBD_FAIL_MDS_GET_INFO_NET        0x186
 #define OBD_FAIL_MDS_DQACQ_NET           0x187
+#define OBD_FAIL_MDS_STRIPE_CREATE	 0x188
+#define OBD_FAIL_MDS_STRIPE_FID		 0x189
 
 /* OI scrub */
 #define OBD_FAIL_OSD_SCRUB_DELAY			0x190
